--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,31 @@
 	top: 10px;
 }
 
+.flatSearch_marker {
+	width: 40px !important;
+	height: 40px !important;
+	border: 4px solid #2196F3;
+	border-radius: 50%;
+
+	position: relative;
+}
+.flatSearch_marker:before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	border-radius: 50%;
+	background-color: #fff;
+	opacity: 0.7;
+}
+.flatSearch_marker a {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #2196F3;
+	font-weight: 600;
+}
+
 .flatSearch_loading {
 	position: fixed;
 	right: 12.5%;
