--- a/styles.css
+++ b/styles.css
@@ -25,15 +25,19 @@
 	top: 10px;
 }
 
-.flatSearch_marker {
+.flatSearch_marker-inner {
 	width: 40px !important;
 	height: 40px !important;
+
+	margin-left: -15px;
+	margin-top: -13px;
+
 	border: 4px solid #2196F3;
 	border-radius: 50%;
 
 	position: relative;
 }
-.flatSearch_marker:before {
+.flatSearch_marker-inner:before {
 	content: "";
 	position: absolute;
 	inset: 0;
@@ -41,7 +45,7 @@
 	background-color: #fff;
 	opacity: 0.7;
 }
-.flatSearch_marker a {
+.flatSearch_marker-inner a {
 	position: absolute;
 	top: 50%;
 	left: 50%;
